--- a/_data/other-skills.yml
+++ b/_data/other-skills.yml
@@ -1,7 +1,18 @@
-- name: Adobe Photoshop
+- name: Debian & Arch Based Linux Distributions
   percentage: 95
+  color: primary
+
+- name: Trello, Jira and MS Project
+  percentage: 90
   color: info
 
-- name: Adobe Illustrator
-  percentage: 90
+
+- name: Git & Github
+  percentage: 95
   color: success
+
+
+- name: Documentation [ Notion, Obsidian, MS Office ]
+  percentage: 100
+  color: primary
+
