Added Tubitak Project

--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description         : >-
                       embedded systems, robotic applications,
                       and ground control software, I lead
                       technology projects and deliver 
-                      end-to-end solutions."
+                      end-to-end solutions.
 
 
 baseurl             : ""            # Change to empty quotes if you are hosting your site at <your-username>.github.io directly
